NN-5081 integration tests heapsize and jvmArgs added